--- a/name-coding-cli/pom.xml
+++ b/name-coding-cli/pom.xml
@@ -13,8 +13,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <name>name-coding-cli</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
+    <url>https://github.com/balamuru/name-coding</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
