--- a/name-coding-cli/pom.xml
+++ b/name-coding-cli/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <spring.version>5.2.6.RELEASE</spring.version>
+        <commons-cli.version>1.4</commons-cli.version>
     </properties>
 
     <dependencies>
@@ -40,15 +41,9 @@
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-            <version>1.4</version>
+            <version>${commons-cli.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
