--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
 
     <url>https://github.com/balamuru/name-coding</url>
     <properties>
+        <spring.version>5.2.6.RELEASE</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.assembly.plugin.version>3.2.0</maven.assembly.plugin.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <junit.version>4.11</junit.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <junit.version>4.13</junit.version>
         <mockito.version>2.21.0</mockito.version>
     </properties>
     <dependencies>
