--- a/pom.xml
+++ b/pom.xml
@@ -17,22 +17,23 @@
         <maven.compiler.target>11</maven.compiler.target>
         <junit.version>4.13</junit.version>
         <mockito.version>2.21.0</mockito.version>
+        <log4j.version>2.7</log4j.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.7</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.7</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.7</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
